demux: hls: fix byterange offset propagation

refs #29179