modules/demux/adaptive/logic/BufferingLogic.cpp
@@ -387,7 +387,5 @@ vlc_tick_t DefaultBufferingLogic::getBufferingOffset(const BasePlaylist *p) cons
 
 bool DefaultBufferingLogic::isLowLatency(const BasePlaylist *p) const
 {
-    if(userLowLatency.has_value())
-        return userLowLatency.value();
-    return p->isLowLatency();
+    return userLowLatency.value_or(p->isLowLatency());
 }
